# gettext

./: README.md  README.txt  gettext-runtime.diff  winlibs.mak
MSVC11/: gettext.sln
MSVC11/libintl_dll/: libintl_dll.vcxproj
MSVC11/libintl_static/: libintl_static.vcxproj
MSVC14/: gettext.sln  libintl.rc
MSVC14/libintl_dll/: libintl_dll.vcxproj
MSVC14/libintl_static/: libintl_static.vcxproj
MSVC15/: libintl-x64.rc
MSVC15/libintl_dll/: libintl_dll.vcxproj
MSVC15/libintl_static/: libintl_static.vcxproj
MSVC16/: gettext.sln
MSVC17/: gettext.sln
MSVC17/libintl_dll/: libintl_dll.vcxproj
MSVC17/libintl_static/: libintl_static.vcxproj
MSVC6/: gettext.dsw  gettext.ncb  gettext.opt  libintl.rc  vc6.h
MSVC6/libintl_dll/: libintl_dll.dsp  libintl_dll.plg
MSVC6/libintl_static/: libintl_static.dsp  libintl_static.plg
MSVC9/: gettext.sln  libintl-x64.rc  libintl.rc
MSVC9/libintl_dll/: libintl_dll.vcproj
MSVC9/libintl_static/: libintl_static.vcproj
source/: AUTHORS  ChangeLog  DEPENDENCIES  HACKING  INSTALL  Makefile.am  Makefile.in  NEWS  PACKAGING  README  README.woe32  THANKS  aclocal.m4  autogen.sh  configure  configure.ac  version.sh
source/autoconf-lib-link/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
source/build-aux/: fixaclocal  moopp
source/gettext-runtime/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  configure  configure.ac
source/gettext-tools/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
source/gettext-tools/misc/: ChangeLog  Makefile.am  Makefile.in  add-to-archive  autopoint.in  gettextize.in
source/gnulib-local/: ChangeLog  Makefile.am  Makefile.in
source/windows/: gettext.rc
(+1778 files in other folders)
